# patient_survival_prediction

./: .env.example  .gitignore  README.md  VSCODE_GUIDE.md  pyproject.toml  pytest.ini  report.qmd  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: PROJECT_SUMMARY.md  linkedin_post.md  project_summary.qmd
notebooks/: 00_eda.ipynb  01_ml_pipeline.ipynb  02_shap_analysis.ipynb
patient_survival/: __init__.py  cli.py  predictor.py
r/: plots.R  run_analysis.R  survival.R  utils.R
src/data/: extract.py  features.py  transform.py
src/models/: evaluate.py  shap_explainer.py  train.py
src/utils/: config.py  constants.py  logger.py
src/visualisation/: plots.py
tests/: test_cli.py  test_models.py  test_shap.py  test_transform.py
