[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "patient-survival"
version     = "1.0.0"
description = "Clinical patient survival and outcome prediction pipeline"
readme      = "README.md"
requires-python = ">=3.10"

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.2.0",
    "shap>=0.44.0",
    "matplotlib>=3.8.0",
    "plotly>=5.19.0",
    "pyarrow>=14.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.scripts]
# After `pip install -e .`, this command is available globally:
#   predict --input patients.csv --output predictions.csv
predict = "patient_survival.cli:app"

[tool.setuptools.packages.find]
where   = ["."]
include = ["patient_survival*", "src*"]

[tool.ruff]
line-length    = 88
target-version = "py310"
select         = ["E", "F", "W", "I"]
ignore         = ["E501"]

[tool.pytest.ini_options]
testpaths        = ["tests"]
python_files     = ["test_*.py"]
python_functions = ["test_*"]
addopts          = "-v --tb=short"
